--- a/foodhub_project.ipynb
+++ b/foodhub_project.ipynb
@@ -94,7 +94,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "metadata": {
         "id": "GF01IZDbJY_O",
         "scrolled": true
@@ -220,14 +220,14 @@
               "4             24  "
             ]
           },
-          "execution_count": 2,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "# read the data\n",
-        "df = pd.read_csv('foodhub_order.csv')\n",
+        "df = pd.read_csv('data/foodhub_order.csv')\n",
         "# returns the first 5 rows\n",
         "df.head()"
       ]
@@ -971,7 +971,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.2"
+      "version": "3.12.4"
     }
   },
   "nbformat": 4,
