--- a/foodhub_project.ipynb
+++ b/foodhub_project.ipynb
@@ -6,6 +6,11 @@
         "id": "Gc8x8QimJY_H"
       },
       "source": [
+        "<center><p float=\"center\">\n",
+        "  <img src=\"https://upload.wikimedia.org/wikipedia/commons/e/e9/4_RGB_McCombs_School_Brand_Branded.png\" width=\"300\" height=\"100\"/>\n",
+        "  <img src=\"https://mma.prnewswire.com/media/1458111/Great_Learning_Logo.jpg?p=facebook\" width=\"200\" height=\"100\"/>\n",
+        "</p></center>\n",
+        "\n",
         "# Project Python Foundations: FoodHub Data Analysis\n",
         "\n",
         "**Marks: 60**"
