--- a/foodhub_project.ipynb
+++ b/foodhub_project.ipynb
@@ -880,13 +880,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 36,
       "metadata": {
         "id": "PaJZ3wlOJY_U"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "restaurant_name\n",
+              "Shake Shack                  219\n",
+              "The Meatball Shop            132\n",
+              "Blue Ribbon Sushi            119\n",
+              "Blue Ribbon Fried Chicken     96\n",
+              "Parm                          68\n",
+              "Name: count, dtype: int64"
+            ]
+          },
+          "execution_count": 36,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "# Write the code here"
+        "# Top 5 Restaurant per # of Orders\n",
+        "top_restaurant = df['restaurant_name'].value_counts()\n",
+        "\n",
+        "top_restaurant.head(5)"
       ]
     },
     {
@@ -909,13 +929,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 49,
       "metadata": {
         "id": "c-Xnus3VJY_U"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "cuisine_type\n",
+              "American    415\n",
+              "Japanese    335\n",
+              "Italian     207\n",
+              "Chinese     163\n",
+              "Mexican      53\n",
+              "Name: count, dtype: int64"
+            ]
+          },
+          "execution_count": 49,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "# Write the code here"
+        "# Most Popular Cuisine on Weekends\n",
+        "top_weekend_cuisines = df[df['day_of_the_week'] =='Weekend']['cuisine_type'].value_counts()\n",
+        "\n",
+        "top_weekend_cuisines.head()"
       ]
     },
     {
