Update ipynb file

--- a/foodhub_project.ipynb
+++ b/foodhub_project.ipynb
@@ -929,7 +929,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 50,
       "metadata": {
         "id": "c-Xnus3VJY_U"
       },
@@ -946,14 +946,14 @@
               "Name: count, dtype: int64"
             ]
           },
-          "execution_count": 49,
+          "execution_count": 50,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "# Most Popular Cuisine on Weekends\n",
-        "top_weekend_cuisines = df[df['day_of_the_week'] =='Weekend']['cuisine_type'].value_counts()\n",
+        "top_weekend_cuisines = df[df['day_of_the_week'] == 'Weekend']['cuisine_type'].value_counts()\n",
         "\n",
         "top_weekend_cuisines.head()"
       ]
@@ -978,13 +978,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 75,
       "metadata": {
         "id": "OTpHyTdzJY_U"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "29.24130663856691"
+            ]
+          },
+          "execution_count": 75,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "# Write the code here"
+        "# Percentage of Orders Costing More Than 20 Dollars\n",
+        "\n",
+        "all_orders = len(df)\n",
+        "\n",
+        "orders_over_twenty = df[df['cost_of_the_order'] > 20.00]['cuisine_type'].count()\n",
+        "\n",
+        "percent_orders_over_twenty = (orders_over_twenty / all_orders) * 100\n",
+        "\n",
+        "percent_orders_over_twenty\n"
       ]
     },
     {
@@ -1013,7 +1032,7 @@
       },
       "outputs": [],
       "source": [
-        "# Write the code here"
+        "# Mean Order Delivery Time\n"
       ]
     },
     {
