--- a/foodhub_project.ipynb
+++ b/foodhub_project.ipynb
@@ -978,7 +978,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": 78,
       "metadata": {
         "id": "OTpHyTdzJY_U"
       },
@@ -989,17 +989,16 @@
               "29.24130663856691"
             ]
           },
-          "execution_count": 75,
+          "execution_count": 78,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "# Percentage of Orders Costing More Than 20 Dollars\n",
+        "all_orders = len(df['order_id'])\n",
         "\n",
-        "all_orders = len(df)\n",
-        "\n",
-        "orders_over_twenty = df[df['cost_of_the_order'] > 20.00]['cuisine_type'].count()\n",
+        "orders_over_twenty = df[df['cost_of_the_order'] > 20.00]['order_id'].count()\n",
         "\n",
         "percent_orders_over_twenty = (orders_over_twenty / all_orders) * 100\n",
         "\n",
@@ -1026,13 +1025,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 79,
       "metadata": {
         "id": "cyFL13hNJY_V"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "24.161749209694417"
+            ]
+          },
+          "execution_count": 79,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "# Mean Order Delivery Time\n"
+        "# Mean Order Delivery Time\n",
+        "mean_order_delivery = df['delivery_time'].mean()\n",
+        "\n",
+        "mean_order_delivery"
       ]
     },
     {
@@ -1061,7 +1074,8 @@
       },
       "outputs": [],
       "source": [
-        "# Write the code here"
+        "# Find top 5 most frequent customers and grant 20% discount vouchers\n",
+        "\n"
       ]
     },
     {
