--- a/foodhub_project.ipynb
+++ b/foodhub_project.ipynb
@@ -1074,8 +1074,7 @@
       },
       "outputs": [],
       "source": [
-        "# Find top 5 most frequent customers and grant 20% discount vouchers\n",
-        "\n"
+        "# Find top 5 most frequent customers and grant 20% discount vouchers\n"
       ]
     },
     {
