--- a/foodhub_project.ipynb
+++ b/foodhub_project.ipynb
@@ -788,7 +788,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": 81,
       "metadata": {
         "id": "OTpHyTdzJY_U"
       },
@@ -797,7 +797,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Percentage of orders costing more than 20 dollars: 29.24130663856691\n"
+            "Percentage of orders costing more than 20 dollars: 29.24%\n"
           ]
         }
       ],
@@ -811,7 +811,7 @@
         "# Convert Orders over 20.00 into percentage\n",
         "percent_orders_over_twenty = (orders_over_twenty / all_orders) * 100\n",
         "\n",
-        "print(f'Percentage of orders costing more than 20 dollars: {percent_orders_over_twenty}')\n"
+        "print(f'Percentage of orders costing more than 20 dollars: {percent_orders_over_twenty:.2f}%')\n"
       ]
     },
     {
