--- a/foodhub_project.ipynb
+++ b/foodhub_project.ipynb
@@ -2477,8 +2477,7 @@
         "percent_of_orders_over_sixty_mins = (orders_over_sixty_mins / total_orders) * 100\n",
         "\n",
         "# Print informative message with formatted percentage\n",
-        "print(f'Percentage of orders taking more than 60 minutes to get delivered from time the order is placed: {percent_of_orders_over_sixty_mins:.2f}%')\n",
-        "\n"
+        "print(f'Percentage of orders taking more than 60 minutes to get delivered from time the order is placed: {percent_of_orders_over_sixty_mins:.2f}%')\n"
       ]
     },
     {
