--- a/foodhub_project.ipynb
+++ b/foodhub_project.ipynb
@@ -288,7 +288,7 @@
         "id": "UsTNy3unJY_R"
       },
       "source": [
-        "#### Observations:\n"
+        "#### Observations: There are a total of 1898 rows and 9 columns.\n"
       ]
     },
     {
@@ -341,7 +341,7 @@
         "id": "WJes5GP2JY_S"
       },
       "source": [
-        "#### Observations:\n"
+        "#### Observations: There are four int64, four object, and one float datatypes for the columns. Object types are classified as non-numeric strings in Python.\n"
       ]
     },
     {
@@ -391,7 +391,7 @@
         "id": "jDHT3vD1JY_S"
       },
       "source": [
-        "#### Observations:\n"
+        "#### Observations: There are no null or missing data for this DataFrame.\n"
       ]
     },
     {
@@ -440,7 +440,7 @@
         "id": "9YbSOR5wJY_T"
       },
       "source": [
-        "#### Observations:\n"
+        "#### Observations: 25% of food prep time falls under 23 mins, 50% falls under 27 mins and 75% are 31 mins and less. The average food prep time is a little over 27 mins.\n"
       ]
     },
     {
@@ -561,7 +561,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### Observations: Most preferred cost of orders is between $11 and $12. The median cost of order is $14."
+        "#### Observations: Most preferred cost of orders is between 11 and 12 dollars. The median cost of order is 14 dollars."
       ]
     },
     {
@@ -1967,7 +1967,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.4"
+      "version": "3.12.2"
     }
   },
   "nbformat": 4,
