--- a/foodhub_project.ipynb
+++ b/foodhub_project.ipynb
@@ -481,7 +481,7 @@
         "id": "5E0O_oviJY_T"
       },
       "source": [
-        "#### Observations:\n"
+        "#### Observations: There are a total of 736 out of 1898 orders that were not rated. The percentage of orders that were not rated is: 38.79%.\n"
       ]
     },
     {
@@ -561,7 +561,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### Observations: Most preferred cost of orders is between 11 and 12 dollars. The median cost of order is 14 dollars."
+        "#### Observations: Most preferred cost of orders is between 11 and 12 dollars. The median cost of order is 14 dollars. There are no outliers."
       ]
     },
     {
@@ -603,7 +603,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### Observations:"
+        "#### Observations: Food prep time varies across all orders. The median time is 27 minutes and there are no outliers."
       ]
     },
     {
@@ -645,7 +645,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### Observations:"
+        "#### Observations: The delivery time varies across all orders and the median delivery time is 25 minutes."
       ]
     },
     {
@@ -675,7 +675,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### Observations:"
+        "#### Observations: The top cuisine type ordered is American, followed by Japanese, Itatian, Chinese and Mexican food."
       ]
     },
     {
@@ -704,7 +704,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### Observations:"
+        "#### Observations: There are more orders over the weekend than weekday. Customers are more likely relaxing at home instead of dinning in at a restaurant."
       ]
     },
     {
@@ -733,7 +733,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### Observations:"
+        "#### Observations: Customers are not responding about 39% of all orders. Ratings of 5 is the highest all ratings."
       ]
     },
     {
@@ -763,7 +763,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### Observations:"
+        "#### Observations: Shake Shack is the most popular restaurant folllowed by The Meatball Soup, Blue Ribbon Sushi, Blue Ribbbon Fried Chicken and Parm."
       ]
     },
     {
@@ -813,7 +813,7 @@
         "id": "tnjhWgUfJY_U"
       },
       "source": [
-        "#### Observations:\n"
+        "#### Observations: Shake Shack is the most popular restaurant folllowed by The Meatball Soup, Blue Ribbon Sushi, Blue Ribbbon Fried Chicken and Parm.\n"
       ]
     },
     {
@@ -863,7 +863,7 @@
         "id": "bpQ270TUJY_U"
       },
       "source": [
-        "#### Observations:\n"
+        "#### Observations: American cuisine is the most popular cuisine on weekends.\n"
       ]
     },
     {
@@ -909,7 +909,7 @@
         "id": "77KNAC5zJY_U"
       },
       "source": [
-        "#### Observations:\n"
+        "#### Observations: Over 29% of orders costs more than 20 dollars.\n"
       ]
     },
     {
@@ -949,7 +949,7 @@
         "id": "F35SRV-HJY_V"
       },
       "source": [
-        "#### Observations:\n"
+        "#### Observations: The average delivery time of all of the orders is over a little over 24 minutes.\n"
       ]
     },
     {
@@ -998,7 +998,7 @@
         "id": "9tWVwfX6JY_V"
       },
       "source": [
-        "#### Observations:\n"
+        "#### Observations: The top 5 customer id that will receive a 20% discount are: (Customer ID: 52832, 47440, 83287, 250494, 259341).\n"
       ]
     },
     {
@@ -1064,13 +1064,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "#### Observations:"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": 23,
       "metadata": {},
@@ -1103,7 +1096,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### Observations:"
+        "#### Observations: There are no strong correlation between any of the numerical categories."
       ]
     },
     {
@@ -1162,7 +1155,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### Observations:"
+        "#### Observations: The majority cost of the orders between 10 and 15 dollar usually take between 23 and 26 minutes to deliver."
       ]
     },
     {
@@ -1191,7 +1184,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### Observations:"
+        "#### Observations: The order cost between 10 and 15 dollars have food prep times mostly in the 20 to 25 minute range."
       ]
     },
     {
