--- a/foodhub_project.ipynb
+++ b/foodhub_project.ipynb
@@ -5,13 +5,10 @@
       "metadata": {
         "id": "Gc8x8QimJY_H"
       },
-      "source": [
-        "<center><p float=\"center\">\n",
-        "  <img src=\"https://upload.wikimedia.org/wikipedia/commons/e/e9/4_RGB_McCombs_School_Brand_Branded.png\" width=\"300\" height=\"100\"/>\n",
-        " \n",
+              " \n",
         "</p></center>\n",
         "\n",
-        "# Project Python Foundations: FoodHub Data Analysis\n",
+        "# FoodHub Data Analysis\n",
         "\n"
       ]
     },
