1.foodhub_project.html

--- a/foodhub_project.ipynb
+++ b/foodhub_project.ipynb
@@ -7,11 +7,10 @@
       },
       "source": [
         "<center><p float=\"center\">\n",
-        "  <img src=\"https://upload.wikimedia.org/wikipedia/commons/e/e9/4_RGB_McCombs_School_Brand_Branded.png\" width=\"300\" height=\"100\"/>\n",
         " \n",
         "</p></center>\n",
         "\n",
-        "# Project Python Foundations: FoodHub Data Analysis\n",
+        "# FoodHub Data Analysis\n",
         "\n"
       ]
     },
